Replace ModelMaterial with generic Material<T>, simplify texture/material pipeline, and add concrete resource implementations.